fix: fix entry poiunt, add webpack scripts

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ecommerce-application",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
+    "build": "webpack --config ./webpack.config.js --env mode=prod"
   },
   "repository": {
     "type": "git",
