--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "prettier --write"
     ],
     "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint"
+      "eslint --fix"
     ]
   },
   "scripts": {
@@ -30,9 +30,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint:fix": "npm run lint --fix",
+    "format": "prettier . --write",
     "prepare": "husky install"
   },
   "browserslist": {
