--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 GENERATE_SOURCEMAP=false
+
+REACT_APP_PROJECT_KEY="30fingers-project"
+REACT_APP_AUTH_URL="https://auth.europe-west1.gcp.commercetools.com"
+REACT_APP_API_URL="https://api.europe-west1.gcp.commercetools.com"
+REACT_APP_CLIENT_SECRET="kp09JBXBSa4BKA_gb4LSVmK9rTui9cq7"
+REACT_APP_CLIENT_ID="3ORrXjYRetlBADYWNfNFnPkV"
