--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "dependencies": {
     "@commercetools/platform-sdk": "^4.11.0",
     "@commercetools/sdk-client-v2": "^2.2.0",
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.18",
+    "@mantine/dates": "^6.0.18",
+    "@mantine/form": "^6.0.18",
+    "@mantine/hooks": "^6.0.18",
+    "@mantine/notifications": "^6.0.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +18,7 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "dayjs": "^1.11.9",
     "lint-staged": "^13.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
