--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@commercetools/platform-sdk": "^4.11.0",
     "@commercetools/sdk-client-v2": "^2.2.0",
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mantine/core": "^6.0.18",
     "@mantine/dates": "^6.0.18",
     "@mantine/form": "^6.0.18",
     "@mantine/hooks": "^6.0.18",
     "@mantine/notifications": "^6.0.18",
+    "@mui/material": "^5.14.4",
+    "@mui/x-date-pickers": "^6.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
