--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mantine/dates": "^6.0.19",
     "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
+    "@mantine/notifications": "^6.0.19",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
