test: add tests

--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "prettier": "3.0.1"
+    "prettier": "3.0.1",
+    "resize-observer-polyfill": "^1.5.1"
   }
 }
