--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.7",
     "dayjs": "^1.11.9",
     "lint-staged": "^13.2.3",
+    "mobx": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
