--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@commercetools/platform-sdk": "^4.11.0",
     "@commercetools/sdk-client-v2": "^2.2.0",
     "@emotion/react": "^11.11.1",
+    "@mantine/carousel": "^6.0.19",
     "@mantine/core": "^6.0.19",
     "@mantine/dates": "^6.0.19",
     "@mantine/form": "^6.0.19",
@@ -19,6 +20,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "dayjs": "^1.11.9",
+    "html-react-parser": "^4.2.1",
     "lint-staged": "^13.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
