--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@commercetools/platform-sdk": "^4.11.0",
     "@commercetools/sdk-client-v2": "^2.2.0",
     "@emotion/react": "^11.11.1",
+    "@mantine/carousel": "^6.0.19",
     "@mantine/core": "^6.0.19",
     "@mantine/dates": "^6.0.19",
     "@mantine/form": "^6.0.19",
